--- a/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
+++ b/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
@@ -151,10 +151,10 @@
                             <mat-cell *matCellDef="let loan">
 
                                 <button mat-icon-button color="primary" (click)="editLoan(loan)"
-                                        *ngIf="CheckEditStatus(loan)">
+                                        *ngIf="CheckEditStatus(loan) && currentActivity.U">
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
                                 </button>
-                                <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
+                                <button mat-icon-button color="primary" *ngIf="currentActivity.R" (click)="ViewOrr(loan)">
                                     <mat-icon  class="text-green" style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
                                 </button>
                             </mat-cell>
