--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -154,7 +154,7 @@
                 <ng-container matColumnDef="View">
                     <th mat-header-cell *matHeaderCellDef>Actions</th>
                     <td mat-cell *matCellDef="let LocationHistories">
-                        <button mat-icon-button (click)="view(LocationHistories)">
+                        <button mat-icon-button *ngIf="currentActivity.R" (click)="view(LocationHistories)">
                             <mat-icon class="text-green" title="View Vendor">visibility</mat-icon>
                         </button>
                     </td>
