--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -114,7 +114,7 @@
             <div>
                 <input type="button" mat-raised-button color="primary"
                        class=" mx-2 mt-2 mat-raised-button mat-button-base mat-primary searchLCBtn mt-2"
-                       *ngIf="!viewOnly" [value]="loc_text" (click)="Add()"/>
+                       *ngIf="!viewOnly && currentActivity.C" [value]="loc_text" (click)="Add()"/>
                 <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
             </div>
 
@@ -126,13 +126,13 @@
 
     <div class="mt-4 justify-content-center text-right border-t py-4">
         <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="saveSubmit()"
-                *ngIf="!viewOnly">
+                *ngIf="!viewOnly && (currentActivity.C || currentActivity.U)">
             <mat-icon class="mr-2">save</mat-icon>
             Save & Submit
         </button>
         <button mat-raised-button color="primary"
                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger ml-2"
-                (click)="deleteVendor()" *ngIf="isEdit">
+                (click)="deleteVendor()" *ngIf="isEdit && currentActivity.D">
             <mat-icon class="mr-2">delete</mat-icon>
             Delete Vendor
         </button>
