--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -135,13 +135,13 @@
                     <ng-container matColumnDef="Actions">
                         <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                         <mat-cell *matCellDef="let loanutilization">
-                            <button mat-icon-button color="primary" *ngIf="CheckEditStatus(loanutilization)"
+                            <button mat-icon-button color="primary" *ngIf="CheckEditStatus(loanutilization) && currentActivity.U"
                                     (click)="editloanutilization(loanutilization)">
                                 <mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>
                             </button>
 
 
-                            <button mat-icon-button color="primary" *ngIf="CheckViewStatus(loanutilization)"
+                            <button mat-icon-button color="primary" *ngIf="CheckViewStatus(loanutilization) && currentActivity.R"
                                     (click)="viewloanutilization(loanutilization)">
                                 <mat-icon  class="text-green" title="View land">visibility</mat-icon>
                             </button>
