--- a/src/app/modules/loan/rejected-loan/rejected-loan.component.html
+++ b/src/app/modules/loan/rejected-loan/rejected-loan.component.html
@@ -157,7 +157,7 @@
 <!--                                        *ngIf="!CheckEditStatus(loan)">-->
 <!--                                    <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>-->
 <!--                                </button>-->
-                                <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
+                                <button mat-icon-button color="primary" *ngIf="currentActivity.R" (click)="ViewOrr(loan)">
                                     <mat-icon  class="text-green" style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
                                 </button>
                             </mat-cell>
