--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -481,12 +481,12 @@
 
     <div class="form-group kt-form__group mb-2 row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button type="button" *ngIf="showFinalOrrTable" (click)="saveLoanDbr()" class="mr-2 btn btn-primary bg-green" mat-raised-button
+            <button type="button" *ngIf="showFinalOrrTable && currentActivity.C" (click)="saveLoanDbr()" class="mr-2 btn btn-primary bg-green" mat-raised-button
                     color="primary">
                 <mat-icon class="mr-2">save</mat-icon>
                 Save & Submit DBR
             </button>
-            <button class="bg-green" mat-raised-button color="primary" (click)="SaveOrSubmit()" [disabled]="submitted">
+            <button *ngIf="currentActivity.U" class="bg-green" mat-raised-button color="primary" (click)="SaveOrSubmit()" [disabled]="submitted">
                 <mat-icon class="mr-2">save</mat-icon>
                 {{showFinalOrrTable ? "Submit" : "Save"}}</button>
             <!--            *ngIf="submitArray?.length>0"-->
@@ -495,7 +495,7 @@
                      [disabled]="submitted">
                 <mat-icon>navigate_next</mat-icon>
                 {{showFinalOrrTable ? "Back" : "Next"}}</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;<span id="llcInquiryText" class="cursor-pointer" (click)="goToPendingList()"><b>Pending List</b></span>
+            &nbsp;&nbsp;&nbsp;&nbsp;<span *ngIf="currentActivity.C" id="llcInquiryText" class="cursor-pointer" (click)="goToPendingList()"><b>Pending List</b></span>
             <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
         </div>
     </div>
