--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -126,17 +126,17 @@
                         <ng-container matColumnDef="actions">
                             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                             <mat-cell *matCellDef="let request">
-                                <button mat-icon-button color="primary"
+                                <button mat-icon-button color="primary" *ngIf="currentActivity.U"
                                         (click)="downloadFile(request.Cnic,request.NDCId)">
                                     <mat-icon title="download">file_download</mat-icon>
                                 </button>
 
-                                <button mat-icon-button color="primary" *ngIf="submitDeleteStatus(request)"
+                                <button mat-icon-button color="primary" *ngIf="submitDeleteStatus(request) && currentActivity.D"
                                         (click)="DeleteUser(request)">
                                     <mat-icon title="Delete">delete</mat-icon>
                                 </button>
 
-                                <button mat-icon-button color="primary" *ngIf="submitSubmitStatus(request)"
+                                <button mat-icon-button color="primary" *ngIf="submitSubmitStatus(request) && currentActivity.U"
                                         (click)="SubmitUser(request)">
                                     <mat-icon>check_circle</mat-icon>
                                 </button>
