--- a/src/app/modules/tour-dairy/search-tour-diary-tab/search-tour-diary-tab.component.html
+++ b/src/app/modules/tour-dairy/search-tour-diary-tab/search-tour-diary-tab.component.html
@@ -51,7 +51,7 @@
                         </td>
                         <td style="width: 20%">{{child.StatusName}}</td>
                         <td>
-                            <button mat-icon-button color="primary" *ngIf="CheckDirectionStatus(child)"
+                            <button mat-icon-button color="primary" *ngIf="CheckDirectionStatus(child) && currentActivity.U"
                                     (click)="redirectTourDiary(child)">
                                 <mat-icon style="margin-left: 5px;" title="edit tour diary">edit</mat-icon>
                             </button>
