--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -179,8 +179,8 @@
     </div>
     <div *ngIf="!isMCO" class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
-            <button class="ml-2 bg-green" mat-raised-button color="primary" (click)="save()"><mat-icon class="mr-2">save</mat-icon>Save</button>
-            <button class="ml-2" mat-raised-button color="primary" (click)="submit()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
+            <button class="ml-2 bg-green" mat-raised-button color="primary" *ngIf="currentActivity.C" (click)="save()"><mat-icon class="mr-2">save</mat-icon>Save</button>
+            <button class="ml-2" mat-raised-button color="primary" *ngIf="currentActivity.U" (click)="submit()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
         </div>
     </div>
 </div>
