--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -316,16 +316,16 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button" *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
-                                <button type="button" *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
+                                <button type="button" *ngIf="isUpdate==false && currentActivity.C" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>{{btnText}}</button>
+                                <button type="button" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>Update</button>
 
-                                <button type="button" mat-raised-button class="mr-2" color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
+                                <button type="button" mat-raised-button *ngIf="currentActivity.U" class="mr-2" color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
                                 <button type="button"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button color="danger" (click)="onClearForm()">
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearForm()">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
                                 </button>
@@ -358,13 +358,13 @@
                                     <tbody>
                                     <tr *ngFor="let ZcTourDiary of TourDiaryList" >
                                         <td>
-                                            <button   type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZcTourDiary, 'edit')"  (click)="edit(ZcTourDiary); container.scrollTop = 0"
+                                            <button   type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZcTourDiary, 'edit') && currentActivity.U"  (click)="edit(ZcTourDiary); container.scrollTop = 0"
                                             >
                                                 <mat-icon>
                                                     edit
                                                 </mat-icon>
                                             </button>
-                                            <button  type="button" mat-icon-button *ngIf="checkStatus(ZcTourDiary, 'delete')" (click)="delete(ZcTourDiary, 'C')">
+                                            <button  type="button" mat-icon-button *ngIf="checkStatus(ZcTourDiary, 'delete') && currentActivity.D" (click)="delete(ZcTourDiary, 'C')">
                                                 <mat-icon class="text-red-500">
                                                     delete_forever
                                                 </mat-icon>
