--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -180,9 +180,9 @@
 
                             <div class="row mt-2 mr-1">
                                 <div class="col-lg-12 text-right">
-                                    <button type="button" class="ml-2 bg-green" mat-raised-button color="primary" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>
+                                    <button type="button" class="ml-2 bg-green" mat-raised-button color="primary" *ngIf="currentActivity.C || currentActivity.U" (click)="saveTourDiary()"><mat-icon class="mr-2">save</mat-icon>
                                         {{btnText}}</button>
-                                    <button  type="button" *ngIf="isUpdate==true"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                    <button  type="button" *ngIf="isUpdate==true && currentActivity.U"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                         <mat-icon class="mr-2">check_circle</mat-icon>
                                         Submit
                                     </button>
@@ -237,13 +237,13 @@
                                     <tbody>
                                     <tr *ngFor="let ZmTourDiary of TourDiaryList">
                                         <td>
-                                            <button class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZmTourDiary, 'edit')" (click)="edit(ZmTourDiary); container.scrollTop = 0"
+                                            <button class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZmTourDiary, 'edit') && currentActivity.U" (click)="edit(ZmTourDiary); container.scrollTop = 0"
                                             >
                                                 <mat-icon>
                                                     edit
                                                 </mat-icon>
                                             </button>
-                                            <button mat-icon-button *ngIf="checkStatus(ZmTourDiary, 'delete')" (click)="delete(ZmTourDiary, 'C'); container.scrollTop = 0">
+                                            <button mat-icon-button *ngIf="checkStatus(ZmTourDiary, 'delete') && currentActivity.D" (click)="delete(ZmTourDiary, 'C'); container.scrollTop = 0">
                                                 <mat-icon class="text-red-500">
                                                     delete_forever
                                                 </mat-icon>
