--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -246,23 +246,23 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button"  *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary"
+                                <button type="button"  *ngIf="isUpdate==false && currentActivity.C" class="mr-2 bg-green" mat-raised-button color="primary"
                                         (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button  type="button" *ngIf="isUpdate==true"  class="mr-2 bg-green" mat-raised-button color="primary"
+                                <button  type="button" *ngIf="isUpdate==true && currentActivity.U"  class="mr-2 bg-green" mat-raised-button color="primary"
                                         (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button  type="button" *ngIf="isUpdate==true"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                                <button  type="button" *ngIf="isUpdate==true && currentActivity.U"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
                                 <button type="button"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button color="danger" (click)="onClearForm()">
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearForm()">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
                                 </button>
@@ -405,10 +405,10 @@
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
-                                        <button *ngIf="checkStatus(single_list, 'edit')" mat-icon-button (click)="editData(single_list); container.scrollTop = 0">
+                                        <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U" mat-icon-button (click)="editData(single_list); container.scrollTop = 0">
                                             <mat-icon>edit</mat-icon>
                                         </button>
-                                        <button *ngIf="checkStatus(single_list, 'delete')" mat-icon-button (click)="deleteData(single_list)">
+                                        <button *ngIf="checkStatus(single_list, 'delete') && currentActivity.D" mat-icon-button (click)="deleteData(single_list)">
                                             <mat-icon>delete</mat-icon>
                                         </button>
                                     </td>
