--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -185,24 +185,24 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button type="button" *ngIf="isUpdate===false" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===false && currentActivity.C" class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button type="button" *ngIf="isUpdate===true" class="mr-2 bg-green" mat-raised-button
+                                <button type="button" *ngIf="isUpdate===true && currentActivity.U" class="mr-2 bg-green" mat-raised-button
                                         color="primary" (click)="saveTourDiary()">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
                                 <button type="button" mat-raised-button class="mr-2"
-                                        color="primary" [disabled]="checkDisable" (click)="changeStatus('','S')">
+                                        color="primary" [disabled]="checkDisable" *ngIf="currentActivity.U" (click)="changeStatus('','S')">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     Submit
                                 </button>
                                 <button type="button"
                                         class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button color="danger" (click)="onClearForm()">
+                                        mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearForm()">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
                                 </button>
@@ -240,11 +240,11 @@
                                 <tbody *ngFor="let single_list of TourDiaryList">
                                 <tr>
                                     <td class="border-r border-gray-400">
-                                        <button *ngIf="checkStatus(single_list, 'edit')" type="button" mat-icon-button
+                                        <button *ngIf="checkStatus(single_list, 'edit') && currentActivity.U" type="button" mat-icon-button
                                                 (click)="edit(single_list); container.scrollTop = 0">
                                             <mat-icon>edit</mat-icon>
                                         </button>
-                                        <button *ngIf="checkStatus(single_list, 'delete')" type="button" mat-icon-button
+                                        <button *ngIf="checkStatus(single_list, 'delete') && currentActivity.D" type="button" mat-icon-button
                                                 (click)="delete(single_list,'C')">
                                             <mat-icon>delete</mat-icon>
                                         </button>
