--- a/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
+++ b/src/app/modules/tour-plan/tour-approval-tab/tour-approval-tab.component.html
@@ -19,14 +19,14 @@
 
                 <div class="mr-5">
                     <button class="mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary"
-                            mat-flat-button color="primary"
+                            mat-flat-button color="primary" *ngIf="currentActivity.U"
                             (click)="$event.stopPropagation();change(activity,'A')">
                         <mat-icon class="me-2">check_circle</mat-icon>
                         Approve
                     </button>
                     <button
                         class=" mx-3 mat-raised-button mat-button-base kt-login__btn-primary btn-block mat-primary bg-red-500"
-                        mat-flat-button color="warn"
+                        mat-flat-button color="warn" *ngIf="currentActivity.U"
                         (click)="$event.stopPropagation();change(activity,'R',i,activity.UserId)">
                         <mat-icon class="me-2">close</mat-icon>
                         Referback
@@ -67,7 +67,7 @@
                         <td style="width: 20%">{{child?.StatusName}}</td>
 
                         <td style="width: 20%">
-                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"
+                            <mat-checkbox *ngIf="checkBoxCheck(child.Status) && currentActivity.C"
                                           (change)="changeCheckBox(activity,child)"></mat-checkbox>
                         </td>
                     </tr>
