--- a/src/app/modules/tour-dairy/signature-pad-for-tour/app-signature-pad-for-diary-approval.html
+++ b/src/app/modules/tour-dairy/signature-pad-for-tour/app-signature-pad-for-diary-approval.html
@@ -6,7 +6,7 @@
 
     </div>
     <div class="col-lg-1">
-        <button mat-icon-button color="warn" (click)="close(true)" style="float: right;">
+        <button mat-icon-button color="warn" (click)="close(false)" style="float: right;">
             <mat-icon>
                 close
             </mat-icon>
